<resources>
    <string name="app_name" translatable="false">ToDo</string>
    <string name="home" translatable="false">Home</string>
    <string name="archived">Arquivados</string>
    <string name="add">Adicionar</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="add_task">Adição de Card</string>
    <string name="save">Salvar</string>
    <string name="title">Título</string>
    <string name="content">Anotação</string>
    <string name="default_error_title">Não era para você ter lido isso.</string>
    <string name="default_error_content">Caso esteja lendo isso, é porque de alguma forma errei.</string>
    <string name="task_created">Tarefa criada</string>
    <string name="error_add_title">Adicione um título.</string>
    <string name="default_title">Título</string>
    <string name="default_content">That\'s the content!</string>
    <string name="default_title_home">Tarefas</string>
    <string name="alt_icon_add">Ícone do símbolo de adição.</string>
    <string name="default_add_message">Crie uma tarefa na aba Adicionar!</string>
    <string name="default_add_error_message">Algum imprevisto aconteceu! Tente novamente.</string>
    <string name="alt_icon_check">Ícone para confirmar a tarefa.</string>
    <string name="alt_icon_archived">Ícone de tarefas arquivadas.</string>
    <string name="default_archived_message">Nenhuma tarefa arquivada.</string>
    <string name="dialog_title">Você deseja:</string>
    <string name="alt_icon_delete">Ícone de deletar.</string>
    <string name="archive_button_text">Arquivar tarefa</string>
    <string name="delete_button_text">Deletar tarefa</string>
    <string name="default_button_second">Texto do segundo botão.</string>
    <string name="default_delete_text">Texto de deletar task.</string>
    <string name="archived_unarchive_button_text">Desarquivar tarefa</string>
    <string name="alt_icon_unarchived">Ícone de desarquivar tarefas.</string>
    <string name="task_archived">Tarefa arquivada</string>
    <string name="task_unarchived">Tarefa desarquivada</string>
    <string name="task_deleted">Tarefa deletada</string>
    <string name="error_task_created">Erro ao tentar criar tarefa. Tente novamente.</string>
    <string name="error_task_get">Erro ao carregar tarefas. Abra e feche o app.</string>
    <string name="error_task_delete">Erro ao tentar deletar tarefa. Tente novamente.</string>
    <string name="error_task_unarchive">Erro ao tentar desarquivar tarefa. Tente novamente.</string>
    <string name="error_task_archive">Erro ao tentar arquivar tarefa. Tente novamente.</string>
    <string name="add_image">Adicionar imagem</string>
    <string name="camera_access">Tirar foto da câmera</string>
    <string name="image_access">Procurar imagem na galeria</string>
    <string name="alt_icon_camera">Ícone de câmera.</string>
    <string name="alt_icon_image">Ícone da galeria.</string>
    <string name="alt_task_has_image">Ícone que aparece quando a tarefa tem uma imagem.</string>
    <string name="remove_image">Remover imagem</string>
    <string name="access_image">Ver imagem</string>
    <string name="alt_icon_set_day_hour">Ícone de um calendário, para definir uma data e horário da tarefa.</string>
    <string name="default_set_day_hour">Adicionar data e hora de conclusão</string>
    <string name="default_conclusion_date">01/01/1970 00:00</string>
    <string name="allow_camera">Permita o acesso à camera nas configurações!</string>
    <string name="allow_gallery">Permita o acesso à galeria nas configurações!</string>
</resources>