<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">
    
    <TextView
        android:id="@+id/task_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/default_title"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:id="@+id/task_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/default_content"
        android:textSize="12sp"
        android:layout_marginBottom="15dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/conclusion_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">

        <ImageView
            android:id="@+id/icon_conclusion_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_calendar"
            android:contentDescription="@string/alt_icon_set_day_hour"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/text_conclusion_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textStyle="italic"
            android:text="@string/default_conclusion_date"
            app:layout_constraintStart_toEndOf="@id/icon_conclusion_date"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/button_delete_task"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_button_dialog_task"
        android:minHeight="50dp">

        <ImageView
            android:id="@+id/icon_delete"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/alt_icon_delete"
            android:src="@drawable/icon_delete"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            app:tint="@color/white"/>

        <TextView
            android:id="@+id/button_delete_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_delete_text"
            android:textSize="16sp"
            android:maxWidth="250dp"
            android:gravity="center"
            app:layout_constraintStart_toEndOf="@id/icon_delete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/button_second"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_button_dialog_task"
        android:minHeight="50dp"
        android:layout_marginTop="10dp">

        <ImageView
            android:id="@+id/icon_second"
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            app:tint="@color/white"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/button_second_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_button_second"
            android:textSize="16sp"
            android:maxWidth="250dp"
            android:gravity="center"
            app:layout_constraintStart_toEndOf="@id/icon_second"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>