<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/titleDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_title"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="15dp"
        android:textStyle="bold"
        android:textSize="18sp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/button_delete_task"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_button_dialog_task"
        android:minHeight="100dp">

        <ImageView
            android:id="@+id/icon_delete"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/alt_icon_delete"
            android:src="@drawable/icon_delete"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            app:tint="@color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_button_text"
            android:textSize="16sp"
            android:maxWidth="150dp"
            android:gravity="center"
            app:layout_constraintStart_toEndOf="@id/icon_delete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/button_archive_task"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_button_dialog_task"
        android:minHeight="100dp"
        android:layout_marginTop="10dp">

        <ImageView
            android:id="@+id/icon_archive"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/alt_icon_archived"
            android:src="@drawable/icon_archive"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            app:tint="@color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/archive_button_text"
            android:textSize="16sp"
            android:maxWidth="150dp"
            android:gravity="center"
            app:layout_constraintStart_toEndOf="@id/icon_archive"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>